--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <!--Link moment.js-->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
+<style>
+
+.jumbotron{
+    background:grey !important;
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+}
+
+
+</style>
 <body> 
     <!--header-->
     <div class=container>
@@ -34,25 +45,25 @@
 
     <!--table to hold results-->
     <div class=container>
-    <div class="card mb-4">
-        <div class="card-header">Current Train Schedule</div>
-            <div class="card-body">
-                <table class="table table-sm table-hover" id="train-table">
-                    <thead>
-                        <tr>
-                            <th scope="col">Train Name</th>
-                            <th scope="col">Destination</th>
-                            <th scope="col">Frequency (min)</th>
-                            <th scope="col">Next Arrival</th>
-                            <th scope="col">Minutes Away</th>
-                        </tr>
-                    </thead>
-                    <tbody class="train-display"></tbody>
-                </table>
+        <div class="card mb-4">
+            <div class="card-header">Current Train Schedule</div>
+                <div class="card-body">
+                    <table class="table table-sm table-hover" id="train-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Train Name</th>
+                                <th scope="col">Destination</th>
+                                <th scope="col">Frequency (min)</th>
+                                <th scope="col">Next Arrival</th>
+                                <th scope="col">Minutes Away</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
     
   
 
@@ -180,8 +191,8 @@ database.ref().on("child_added", function(childSnapshot) {
   console.log("The Train will arrive at " + moment(nextTrain).format("hh:mm"));
 
   // print new row
-  var addRow = $("<tr>").html(
-    $("<td>").text(trainName),
+  var addRow = $("<tr>").append(
+    $("<th>").text(trainName),
     $("<td>").text(trainDestination),
     $("<td>").text(trainFrequency),    
     $("<td>").text(nextArrival),
@@ -189,10 +200,9 @@ database.ref().on("child_added", function(childSnapshot) {
   );
 
   // append each row to table
-  $(".train-display").append(addRow);
+  $("#train-table").append(addRow);
+
 });
 
 </script>
-
-
 </html>
